--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-uglifycss": "^1.0.6",
     "gulp-useref": "^1.2.0",
     "gulp-util": "^3.0.7",
+    "gulp-watch-sequence": "^1.0.0",
     "imagemin-mozjpeg": "^5.1.0",
     "imagemin-pngquant": "^4.2.0",
     "main-bower-files": "^2.11.0",
